Added stubs for `experiment.py` `kirby_dataset_builder.py `query_generator.py`

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,6 +43,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Acronym\n",
+    "K - knowledge\n",
+    "\n",
+    "I - \n",
+    "\n",
+    "R \n",
+    "\n",
+    "B - base\n",
+    "\n",
+    "y - descriptive\n",
+    "\n",
+    "It's a KBy Transformer (pronounced Kirby)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to use"
    ]
   },
@@ -87,6 +105,18 @@
    "display_name": "kirby",
    "language": "python",
    "name": "kirby"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
