Basic model and run params added

--- a/02_statement_classifer.ipynb
+++ b/02_statement_classifer.ipynb
@@ -37,7 +37,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fb4140cda58>"
+       "<IPython.lib.display.IFrame at 0x7f8eba2e5050>"
       ]
      },
      "execution_count": null,
