--- a/06_basic_model.ipynb
+++ b/06_basic_model.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp run_params"
+    "# default_exp basic_model"
    ]
   },
   {
@@ -16,16 +16,17 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "import pytorch_lightning as pl"
+    "import pytorch_lightning as pl\n",
+    "from kirby.run_params import RunParams"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RunParams\n",
+    "# Basic Model\n",
     "\n",
-    "> An object that contains all the parameters necessary to run an `Experiment`. "
+    "> A basic Pytorch lighting module"
    ]
   },
   {
@@ -35,8 +36,9 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "class Model(pl.LightningModule):\n",
-    "    def __init__(self):\n",
+    "class BasicModel(pl.LightningModule):\n",
+    "    def __init__(self, run_params):\n",
+    "        super().__init__()\n",
     "        pass\n",
     "\n",
     "    def prepare_data(self):\n",
@@ -78,9 +80,17 @@
    "outputs": [],
    "source": [
     "# Creation\n",
-    "model = Model()\n",
-    "assert isinstance(model, Model)"
+    "\n",
+    "model = BasicModel(RunParams())\n",
+    "assert isinstance(model, BasicModel)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
