Added prepare data

--- a/05_run_parameters.ipynb
+++ b/05_run_parameters.ipynb
@@ -28,7 +28,7 @@
     "class RunParams():\n",
     "    def __init__(self, \n",
     "                model='gpt2',\n",
-    "                data_dir = 'data',\n",
+    "                data_dir = 'data/wikitext-103-raw/wikitext-103-raw/',\n",
     "                data_files = {'train': ['wiki.train.raw'], 'valid': ['wiki.valid.raw'], 'test': ['wiki.test.raw']},\n",
     "                max_epochs=1,\n",
     "                debug=True,\n",
@@ -46,6 +46,7 @@
     "            ):\n",
     "            \n",
     "        self.model = model\n",
+    "        self.data_dir = data_dir\n",
     "        self.data_files = data_files\n",
     "        self.max_epochs = max_epochs\n",
     "        self.debug = debug\n",
@@ -77,6 +78,13 @@
     "run_params = RunParams()\n",
     "assert isinstance(run_params, RunParams)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
