--- a/index.ipynb
+++ b/index.ipynb
@@ -93,6 +93,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
+    "\n",
+    "Run `./bin/download_data` to download data in project directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
