Added data loading and tokenization

--- a/05_run_parameters.ipynb
+++ b/05_run_parameters.ipynb
@@ -28,8 +28,8 @@
     "class RunParams():\n",
     "    def __init__(self, \n",
     "                model='gpt2',\n",
-    "                data_dir = 'data/wikitext-103-raw/wikitext-103-raw/',\n",
-    "                data_files = {'train': ['wiki.train.raw'], 'valid': ['wiki.valid.raw'], 'test': ['wiki.test.raw']},\n",
+    "                data_dir = 'data/',\n",
+    "                data_files = {'train': ['data/wiki.train.raw'], 'valid': ['data/wiki.valid.raw'], 'test': ['data/wiki.test.raw']},\n",
     "                max_epochs=1,\n",
     "                debug=True,\n",
     "                batch_size=8,\n",
