Data manager added. basic_model modified

--- a/05_run_parameters.ipynb
+++ b/05_run_parameters.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import multiprocessing"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +48,10 @@
     "                momentum=.9,\n",
     "                lr=1e-2,\n",
     "                repo='wikitext-103-raw-v1',\n",
-    "                num_workers=2,\n",
+    "                num_workers=multiprocessing.cpu_count(),\n",
     "                kb_statements_file=None,\n",
     "                run_name='test',\n",
-    "                project_name='test-project'\n",
+    "                project_name='kirby'\n",
     "            ):\n",
     "            \n",
     "        self.model = model\n",
@@ -58,7 +67,8 @@
     "        self.lr = lr\n",
     "        self.repo = repo\n",
     "        self.num_workers = num_workers\n",
-    "        self.kb_statements_file = kb_statements_file\n"
+    "        self.kb_statements_file = kb_statements_file\n",
+    "        self.run_name = run_name\n"
    ]
   },
   {
@@ -70,13 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creation\n",
     "run_params = RunParams()\n",
     "assert isinstance(run_params, RunParams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_params.run_name"
    ]
   },
   {
@@ -92,6 +122,18 @@
    "display_name": "kirby",
    "language": "python",
    "name": "kirby"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
