Basic model testing

--- a/05_run_parameters.ipynb
+++ b/05_run_parameters.ipynb
@@ -120,9 +120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kirby",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kirby"
+   "name": "python3"
   }
  },
  "nbformat": 4,
