--- a/06_basic_model.ipynb
+++ b/06_basic_model.ipynb
@@ -113,6 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "# Creation\n",
     "basic_model = BasicModel(RunParams())\n",
     "assert isinstance(basic_model, BasicModel)"
@@ -129,57 +130,13 @@
      "text": [
       "GPU available: False, used: False\n",
       "TPU available: None, using: 0 TPU cores\n",
+      "Running in fast_dev_run mode: will run a full train, val and test loop using 1 batch(es).\n",
       "Using custom data configuration default\n",
-      "Reusing dataset text (/Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d21d90bd4e684987b5add12343cf94a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=19.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Reusing dataset text (/root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-ca424aee03967504.arrow\n",
       "Using custom data configuration default\n",
-      "Reusing dataset text (/Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9afc82ac20024b9a948496177dd6d8a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Reusing dataset text (/root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-424bcf23a14923ca.arrow\n",
       "\n",
       "  | Name  | Type             | Params\n",
       "-------------------------------------------\n",
@@ -192,30 +149,9 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Validation sanity check', layout=Layout…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b5481481fe14bd987586eb6a15e9adb",
+       "model_id": "78875af9a1184a9bb651ea3ea7cfa3e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,8 +166,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/kirby/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:49: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  warnings.warn(*args, **kwargs)\n"
+      "/usr/local/lib/python3.8/dist-packages/datasets/arrow_dataset.py:851: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:141.)\n",
+      "  return torch.tensor(x, **format_kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Validating', layout=Layout(flex='2'), m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/datasets/arrow_dataset.py:851: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:141.)\n",
+      "  return torch.tensor(x, **format_kwargs)\n"
      ]
     },
     {
@@ -253,7 +211,8 @@
     }
    ],
    "source": [
-    "run_params = RunParams(debug=False)\n",
+    "#export\n",
+    "run_params = RunParams(debug=True)\n",
     "basic_model = BasicModel(run_params)\n",
     "trainer = pl.Trainer(\n",
     "    default_root_dir='logs',\n",
@@ -276,7 +235,7 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['attention_mask', 'input_ids', 'text'],\n",
-       "    num_rows: 18014\n",
+       "    num_rows: 8\n",
        "})"
       ]
      },
@@ -299,9 +258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kirby",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kirby"
+   "name": "python3"
   }
  },
  "nbformat": 4,
