--- a/07_data_manager.ipynb
+++ b/07_data_manager.ipynb
@@ -17,6 +17,8 @@
    "source": [
     "#export\n",
     "from datasets import load_dataset\n",
+    "import numpy as np\n",
+    "import torch\n",
     "from transformers import GPT2Tokenizer\n",
     "from kirby.run_params import RunParams"
    ]
@@ -82,11 +84,11 @@
      "output_type": "stream",
      "text": [
       "Using custom data configuration default\n",
-      "Reusing dataset text (/Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
-      "Loading cached processed dataset at /Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-c714d8c39f7c721f.arrow\n",
+      "Reusing dataset text (/root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-f44c67632bf70585.arrow\n",
       "Using custom data configuration default\n",
-      "Reusing dataset text (/Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
-      "Loading cached processed dataset at /Users/robertmorain/.cache/huggingface/datasets/text/default-ffb6d2671372d1b1/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-86bd6573a59288bc.arrow\n"
+      "Reusing dataset text (/root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab)\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/text/default-04bff418a63932f2/0.0.0/daf90a707a433ac193b369c8cc1772139bb6cca21a9c7fe83bdd16aad9b9b6ab/cache-603a02c4d8494d46.arrow\n"
      ]
     }
    ],
@@ -109,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/kirby/lib/python3.8/site-packages/datasets/arrow_dataset.py:851: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  ../torch/csrc/utils/tensor_numpy.cpp:141.)\n",
+      "/usr/local/lib/python3.8/dist-packages/datasets/arrow_dataset.py:851: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:141.)\n",
       "  return torch.tensor(x, **format_kwargs)\n"
      ]
     },
@@ -132,13 +134,20 @@
    "source": [
     "train_ds[1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kirby",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kirby"
+   "name": "python3"
   }
  },
  "nbformat": 4,
