Dataset builder updated

--- a/01_kirby_database_builder.ipynb
+++ b/01_kirby_database_builder.ipynb
@@ -19,38 +19,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"700\"\n",
-       "            height=\"350\"\n",
-       "            src=\"https://lucid.app/documents/embeddedchart/f315bf4f-e9c9-4e56-b015-ceb142d930d1\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f82a59d7ba8>"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame('https://lucid.app/documents/embeddedchart/f315bf4f-e9c9-4e56-b015-ceb142d930d1', width=700, height=350)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,13 +40,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export \n",
+    "from rake_nltk import Rake"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#export\n",
     "class kirby_database_builder():\n",
     "    def __init__(self):\n",
+    "        self.rake = Rake()\n",
     "        pass\n",
     "    \n",
     "    def build(self, ds):\n",
     "        \"Build a database based a given dataset\"\n",
+    "        \n",
+    "        ds.map(self.add_relations, batched=True)\n",
+    "        pass\n",
+    "    \n",
+    "    def add_relations(self, x):\n",
+    "        # Identify keyword\n",
+    "        self.rake.extract_keywords_from_text(x['text'])\n",
+    "        # Get entity from keyword\n",
+    "        # Get relations from entity\n",
+    "        # Write to \n",
     "        pass"
    ]
   },
@@ -95,6 +84,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
